<resources>
    <string name="app_name">maxifit</string>
    <string name="cardios">CARDIOS</string>
    <string name="exercise">EXERCISES</string>
    <string name="lower_body">LOWER BODY</string>
    <string name="upper_body">UPPER BODY</string>
    <string name="mid_body">MID BODY</string>
    <string name="title_activity_neck">neck</string>
    <string name="stand_straight_with_your_feet_placed_at_shoulder_width_and_hands_on_your_forehead_keep_your_back_and_neck_straight_resist_slightly_the_movement_of_your_head_with_your_hands_and_bend_your_head_forward_carefully_make_sure_you_strain_your_neck_muscles_more_than_arm_muscles">Stand straight with your feet placed at shoulder width and hands on your forehead . Keep your back and neck straight. Resist slightly the movement of your head with your hands and bend your head forward carefully. Make sure you strain your neck muscles more than arm muscles</string>
    <string name="front_neck_isometric">Front Neck Isometric</string>
    <string name="back_neck_isometric">Back Neck Isometric</string>
    <string name="seated_head_harness_neck_resistance">Seated Head Harness Neck Resistance</string>
    <string name="lying_face_up_plate_neck_resistance">Lying Face Up Plate Neck Resistance</string>
    <string name="lying_face_down_plate_neck_resistance">Lying Face Down Plate Neck Resistance</string>
    <string name="dummbbell_hammer_curl">DUMBBELL HAMMER CURL</string>
    <string name="incline_dubell_curl">INCLINE DUMBELL CURL</string>
    <string name="barbell_curl">BARBELL CURL</string>
    <string name="dumbell_concentration_curl">DUMBELL CONCENTRATION CURL</string>
    <string name="e2_bar_preacher_curl">E2-BAR PREACHER CURL</string>
    <string name="decline_dumbell_bench_press">DECLINE DUMBELL BENCH PRESS</string>
    <string name="incline_dumbell_flyes">INCLINE DUMBELL FLYES</string>
    <string name="chest_dips_on_parallel_bars">CHEST DIPS ON PARALLEL BARS</string>
    <string name="butterfly_press">BUTTERFLY PRESS</string>
    <string name="barbel_incline_bench_press">BARBEL INCLINE BENCH PRESS</string>
    <string name="seated_palms_up_barbell_wrist_curl">SEATED PALMS-UP BARBELL WRIST CURL</string>
    <string name="palms_down_dumbell_wrist_curl_over_a_bench">PALMS-DOWN DUMBELL WRIST CURL OVER A BENCH</string>
    <string name="seated_two_arms_palms_up_low_pulley_wrist_curl">SEATED TWO ARMS PALMS-UP LOW-PULLEY WRIST CURL</string>
    <string name="standing_palms_up_barbell_behind_the_back_wrist_curl">STANDING PALMS-UP BARBELL BEHIND THE BACK WRIST CURL</string>
    <string name="seated_palms_down_barbell_wrist_curls">SEATED PALMS-DOWN BARBELL WRIST CURLS</string>
    <string name="seated_dumbbell_press">SEATED DUMBBELL PRESS</string>
    <string name="dumbbell_lateral_raise">DUMBBELL LATERAL RAISE</string>
    <string name="dumbbell_bent_over_reverse_fly">DUMBBELL BENT OVER REVERSE FLY</string>
    <string name="dumbbell_one_arm_lying_lateral_raise">DUMBBELL ONE ARM LYING LATERAL RAISE</string>
    <string name="single_dumbbell_front_raise">SINGLE DUMBBELL FRONT RAISE</string>
    <string name="dumbbell_shrugs">DUMBBELL SHRUGS</string>
    <string name="pull_up_shrugs">PULL UP SHRUGS</string>
    <string name="barbell_shrugs">BARBELL SHRUGS</string>
    <string name="dumbbell_upright_row">DUMBBELL UPRIGHT ROW</string>
    <string name="upright_cable_row">UPRIGHT CABLE ROW</string>
    <string name="single_bar_dips">SINGLE BAR DIPS</string>
    <string name="bench_dips">BENCH DIPS</string>
    <string name="close_grip_push_ups">CLOSE GRIP PUSH UPS</string>
    <string name="tricep_dumbbell_kickback">TRICEP DUMBBELL KICKBACK</string>
    <string name="triceps_push_down_rope_attachment">TRICEPS PUSH-DOWN ROPE ATTACHMENT</string>
    <string name="reverse_crunch">REVERSE CRUNCH</string>
    <string name="hanging_leg_raise">HANGING LEG RAISE</string>
    <string name="bench_crunches">BENCH CRUNCHES</string>
    <string name="oblique_floor_crunches">OBLIQUE FLOOR CRUNCHES</string>
    <string name="twisting_crunches">TWISTING CRUNCHES</string>
    <string name="superman">SUPERMAN</string>
    <string name="bench_hyperextension">BENCH HYPEREXTENSION</string>
    <string name="stiiff_leg_barbell_good_orning">STIIFF LEG BARBELL GOOD ORNING</string>
    <string name="barbell_deadlift">BARBELL DEADLIFT</string>
    <string name="exercise_ball_back_extension">EXERCISE BALL BACK EXTENSION</string>
    <string name="dumbbell_lunges">DUMBBELL LUNGES</string>
    <string name="one_legged_cable_kickback">ONE- LEGGED CABLE KICKBACK</string>
    <string name="glute_kickbacks">GLUTE KICKBACKS</string>
    <string name="single_leg_bridge">SINGLE LEG BRIDGE</string>
    <string name="single_leg_squat">SINGLE LEG SQUAT</string>
    <string name="pull_up">PULL UP</string>
    <string name="lying_cambered_barbell_row">LYING CAMBERED BARBELL ROW</string>
    <string name="one_arm_barbell_row">ONE ARM BARBELL ROW</string>
    <string name="lats_pull_down">LATS PULL-DOWN</string>
    <string name="bent_arm_dumbbell_pullover">BENT ARM DUMBBELL PULLOVER</string>
    <string name="incline_leg_curls">INCLINE LEG CURLS</string>
    <string name="front_barbell_squats">FRONT BARBELL SQUATS</string>
    <string name="barbell_squats">BARBELL SQUATS</string>
    <string name="pile_dumbbell_squats">PILE DUMBBELL SQUATS</string>
    <string name="body_weight_squats">BODY WEIGHT SQUATS</string>
    <string name="lying_leg_curls">LYING LEG CURLS</string>
    <string name="barbell_good_morning">BARBELL GOOD MORNING</string>
    <string name="seated_leg_curls">SEATED LEG CURLS</string>
    <string name="thigh_adbuctor">THIGH ADBUCTOR</string>
    <string name="stiff_leggged_dumbbell_deadlift">STIFF-LEGGGED DUMBBELL DEADLIFT</string>
    <string name="standing_dumbbell_calf_raise">STANDING DUMBBELL CALF RAISE</string>
    <string name="jump_rope">JUMP ROPE</string>
    <string name="barbell_seated_calf_rise">BARBELL SEATED CALF RISE</string>
    <string name="seated_calf_raise">SEATED CALF RAISE</string>
    <string name="rocking_standing_calf_raise">ROCKING STANDING CALF RAISE</string>
    <string name="elliptical_machine">ELLIPTICAL MACHINE</string>
    <string name="trendmill">TRENDMILL</string>
    <string name="textview">TextView</string>
    <string name="please_wait">PLEASE WAIT.....</string>
    <string name="todo">TODO</string>
    <string name="string_half_burpee" />
    <string name="standard_burpee">STANDARD BURPEE</string>
    <string name="half_burpee">HALF BURPEE</string>
    <string name="step_onto_a_treadmill_and_select_the_desired_program_you_can_adjust_elevation_of_the_treadmill_to_change_the_intensity_of_the_workout">Step onto a treadmill and select the desired program. You can adjust elevation of the treadmill to change the intensity of the workout.</string>
    <string name="step_onto_an_elliptical_machine_and_select_the_desired_option_from_the_menu_or_choose_a_program_your_movement_should_be_smooth_keep_your_torso_in_a_vertical_position_keep_your_back_straight_and_your_head_up">Step onto an elliptical machine and select the desired option from the menu or choose a program. Your movement should be smooth. Keep your torso in a vertical position. Keep your back straight and your head up.</string>
    <string name="sit_on_the_bench_grab_the_dumbbells_and_lift_the_dumbbells_up_to_shoulder_height_lift_the_dumbbells_up_until_they_nearly_touch_above_your_head_as_you_breathe_out_return_to_the_starting_position_as_you_breathe_in">Sit on the bench, grab the dumbbells and lift the dumbbells up to shoulder height. Lift the dumbbells up until they nearly touch above your head as you breathe out. Return to the starting position as you breathe in.</string>
    <string name="take_the_dumbbell_and_stand_up_straight_keep_your_arms_at_the_sides_of_your_torso_with_your_hands_facing_your_thighs_extend_your_arms_in_front_of_you_with_your_torso_stationary_and_your_elbows_slightly_bent_as_you_breathe_out_lower_the_dumbbells_back_to_the_starting_position_as_you_breathe_in">Take the dumbbell and stand up straight. Keep your arms at the sides of your torso with your hands facing your thighs. Extend your arms in front of you with your torso stationary and your elbows slightly bent as you breathe out. Lower the dumbbells back to the starting position as you breathe in.</string>
    <string name="with_a_dumbbell_in_each_hand_bring_your_torso_forward_so_that_it_is_parallel_to_the_floor_keep_the_back_straight_with_a_little_bend_at_your_waist_keep_your_arms_a_little_bent_and_stationary_at_the_elbows_extend_your_arms_as_you_breathe_out_so_that_your_arms_are_higher_than_your_back_slowly_lower_the_dumbbells_to_their_starting_position_as_you_breathe_in">With a dumbbell in each hand, bring your torso forward so that it is parallel to the floor. Keep the back straight with a little bend at your waist. Keep your arms a little bent and stationary at the elbows. Extend your arms as you breathe out so that your arms are higher than your back. Slowly lower the dumbbells to their starting position as you breathe in.</string>
    <string name="while_holding_a_dumbbell_in_one_hand_lay_with_one_of_your_sides_on_a_bench_your_palm_should_be_facing_the_floor_raise_the_arm_with_the_dumbbell_as_you_breathe_out_lower_the_dumbbell_back_to_the_starting_position_as_you_breathe_in">While holding a dumbbell in one hand, lay with one of your sides on a bench, your palm should be facing the floor. Raise the arm with the dumbbell as you breathe out. Lower the dumbbell back to the starting position as you breathe in.</string>
    <string name="stand_up_straight_with_your_feet_at_shoulder_width_hold_the_dumbbell_in_front_of_yourself_don_t_bend_your_arms_lift_the_dumbbell_until_your_arms_is_slightly_above_your_shoulder_lower_the_dumbbell_back_to_the_starting_position_as_you_breathe_in">Stand up straight with your feet at shoulder width. Hold the dumbbell in front of yourself, don’t bend your arms. Lift the dumbbell until your arms is slightly above your shoulder lower the dumbbell back to the starting position as you breathe in.</string>
    <string name="place_the_grip_at_the_chest_level_and_take_a_pronated_grip_on_bar_keep_your_hands_shoulder_width_apart_extend_your_arms_lower_yourself_to_the_barbell_bending_your_arms_until_your_head_is_under_head_is_under_the_grip_pause_at_the_top_of_the_movement_and_straighten_your_arms_you_also_attach_a_weight_to_a_chain_around_your_neck">Place the grip at the chest level and take a pronated grip on bar. Keep your hands shoulder- width apart. Extend your arms. Lower yourself to the barbell bending your arms until your head is under head is under the grip. Pause at the top of the movement and straighten your arms you also attach a weight to a chain around your neck.</string>
    <string name="place_a_bench_behind_your_back_hold_on_to_the_bench_on_its_edge_with_the_hands_full_extended_separate_at_shoulder_width_place_the_leg_on_the_second_bench_in_front_of_you_slowly_lower_your_body_as_you_inhale_by_bending_the_elbows_as_you_exhale_slowly_return_to_the_starting_position">Place a bench behind your back. Hold on to the bench on its edge with the hands full extended, separate at shoulder width. Place the leg on the second bench in front of you. Slowly lower your body as you inhale by bending the elbows. As you exhale, slowly return to the starting position.</string>
    <string name="maxifit">MAXIFIT</string>
</resources>